--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Release Version
+name: Release
 
 on:
   push:
@@ -10,7 +10,6 @@ env:
 
 jobs:
   ubuntu-build:
-    name: Build on ubuntu
     runs-on: ubuntu-latest
 
     steps:
@@ -21,19 +20,19 @@ jobs:
 
     - name: Configure CMake
       run: cmake -S . -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-      
+
     - name: Build
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
 
     - name: Generate .zip
-    - uses: TheDoctor0/zip-release@0.6.0
-      with: 
-        filename: alpha2hex-cli_${{RELEASE_VERSION}}_ubuntu.zip
-        directory: ${{github.workspace}}/build/apps
+      uses: TheDoctor0/zip-release@0.6.0
+        with: 
+          filename: alpha2hex-cli_${{RELEASE_VERSION}}_ubuntu.zip
+          directory: ${{github.workspace}}/build/apps
 
     - name: Publish version
-    - uses: ncipollo/release-action@v1
-      with:
-        artifacts: alpha2hex-cli_${{RELEASE_VERSION}}_ubuntu.zip
-        omitBody: true
-        token: ${{ secrets.GITHUB_TOKEN }}
+      uses: ncipollo/release-action@v1
+        with:
+          artifacts: alpha2hex-cli_${{RELEASE_VERSION}}_ubuntu.zip
+          omitBody: true
+          token: ${{ secrets.GITHUB_TOKEN }}
